examples/test/testpolicy10350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10350
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key48: value17
      key43: value27
      key15: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value3
          key0: value30
      podSelector:
        matchLabels:
          key24: value7
          key19: value11
